--- a/app/views/routines/create.html
+++ b/app/views/routines/create.html
@@ -2,8 +2,8 @@
   <input type="text" name="plant_id" placeholder="Id da planta" id="plant_id">
   <input type="text" name="nutrient_id" placeholder="Id do nutriente" id="nutrient_id">
 
-  <input type="text" name="frequency_per_hour" placeholder="Frequência por hora" id="frequency_per_hour">
-  <input type="text" name="ppm_quantity" placeholder="Quantidade (ppm)" id="ppm_quantity">
+  <input type="text" name="watering_interval_days" placeholder="Frequência por dia" id="watering_interval_days">
+  <input type="text" name="on_duration" placeholder="Duração de exposição" id="on_duration">
   <input type="datetime-local" name="last_watering" placeholder="Última rega" id="last_watering">
 
   <button type="submit">Enviar</button>
