--- a/app/views/nutrients/edit.html
+++ b/app/views/nutrients/edit.html
@@ -1,5 +1,24 @@
-<form action="" method="POST">
-  <input type="text" name="name" placeholder="Nome" id="name" value="{{nutrient.name}}">
-  <input type="text" name="port" placeholder="Porta" id="port" value="{{nutrient.port}}">
-  <button type="submit">Enviar</button>
-</form>
+{% extends 'template/base.html' %} {% block content %}
+
+<div class="container">
+  <h1>Editar Nutriente #{{ nutrient.id }}</h1>
+  <form action="" method="POST">
+    <input
+      type="text"
+      name="name"
+      placeholder="Nome"
+      id="name"
+      value="{{nutrient.name}}"
+    />
+    <input
+      type="text"
+      name="port"
+      placeholder="Porta"
+      id="port"
+      value="{{nutrient.port}}"
+    />
+    <button type="submit">Enviar</button>
+  </form>
+</div>
+
+{% endblock %}
