--- a/app/views/nutrients/index.html
+++ b/app/views/nutrients/index.html
@@ -1,7 +1,9 @@
-<a href="/plants/create">Adicionar nutriente</a>
+{% extends 'template/base.html' %} {% block content %}
+
 
 <div class="container">
   <h1>Nutrientes</h1>
+  <a href="/plants/create">Adicionar nutriente</a>
   <table class="table table-bordered">
     <thead>
       <tr>
@@ -26,3 +28,4 @@
   </table>
 </div>
 
+{% endblock %}
