--- a/app/views/nutrients/show.html
+++ b/app/views/nutrients/show.html
@@ -1,7 +1,12 @@
+{% extends 'template/base.html' %} {% block content %}
+
+
 <div class="container">
-  <h1>{{ nutrient.name }}</h1>
+  <h1>Nutriente #{{ nutrient.id }}</h1>
+  <p>{{ nutrient.name }}</p>
   <p>Porta: {{ nutrient.port }}</p>
   <a href="/nutrients/{{ nutrient.id }}/edit">Editar</a>
   <a href="/nutrients/{{ nutrient.id }}/delete">Deletar</a>
 </div>
 
+{% endblock %}
