--- a/app/views/template/base.html
+++ b/app/views/template/base.html
@@ -1,5 +1,31 @@
-start
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <title>Gardener</title>
+</head>
+<body>
+  <main class="d-flex flex-row">
+    <nav class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark" style="width: 280px;">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+        <span class="fs-4">Gardener</span>
+      </a>
+      <hr>
+      <ul class="nav nav-pills flex-column mb-auto">
+        <li class="nav-item"><a class="nav-link text-white" href="{{ url_for('plants.index') }}">Plantas</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="{{ url_for('nutrients.index') }}">Nutrientes</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="{{ url_for('routines.index') }}">Rotinas</a></li>
+      </ul>
+      <hr>
+      <a href="https://github.com/akatsuki-central-bh/gardener" class="nav-link text-white">source code</a>
+    </nav>
 
-{% endblock %}
-end
+    {% block content %}
+
+    {% endblock %}
+  </main>
+</body>
+</html>
