--- a/app/views/plants/index.html
+++ b/app/views/plants/index.html
@@ -1,7 +1,6 @@
 {% extends 'template/base.html' %} {% block content %}
 
-
-<div class="container">
+<div class="contaner">
   <h1>Plantas</h1>
   <a href="/plants/create">Adicionar planta</a>
   <table class="table table-bordered">
@@ -26,6 +25,6 @@
       {% endfor %}
     </tbody>
   </table>
-</div>
 
-{% endblock %}
+  {% endblock %}
+</div>
